--- a/config.json
+++ b/config.json
@@ -2,10 +2,19 @@
     "working_dir": "C:/Osama Tarabih/Generalized Modeling Framework",
     "available_models_file": "./Available_Models.csv",
     "water_body_type": "Watershed",
+    "Location": "Other",
     "watershed_size": "Medium",
+    "waterbody_size": "Medium",
     "watershed_type": [
-        "Agricultural, Urban"
+        "Agricultural"
     ],
+    "waterbody_type": [
+        "Coastal",
+        "Estuarine",
+        "Rivers",
+        "Lakes"
+    ],
+    "model_dimensions": "3D",
     "model_parameters": [
         "Q",
         "TP",
@@ -13,18 +22,16 @@
     ],
     "time_step": "Daily",
     "simulation_objectives": [
-        "Holistic Simulation",
-        "BMP locations"
+        "Holistic Simulation"
     ],
     "model_complexity": "Complex",
     "model_availability": "Open source",
     "model_limitations": [
-        "manual calibration",
-        "can not be coupled with optimization algorithm"
+        "limited developer and community support"
     ],
     "weights": {
-        "SimObj_S": 0.2,
-        "Data_S": 0.4,
-        "ModLimit_S": 0.4
+        "SimObj_S": 0.4,
+        "Data_S": 0.3,
+        "ModLimit_S": 0.3
     }
 }
